Fix ractor move of object with generic ivars

This bug was happening only when the `id2ref` table exists. We need
to replace the generic fields before replacing the object id of the
newly moved object.

Fixes [Bug #21664]